@startuml
  class "Employee\n<b>Class Employee</b>" as Employee {
    -id : ?int
    -firstName : ?string
    -lastName : ?string
    -gender : ?string
    -salary : ?float
    +__construct(id, firstName, lastName, gender, salary)
    +getId()
    +getFirstName()
    +getLastName()
    +getGender()
    +getSalary()
    +getAllAsObjects()
    +deleteObjectById(id)
    +insert(firstName, lastName, gender, salaray)
    +getObjectById(id)
    +update()
    +getName()
    +getPulldownMenu(employeeId)
  }
  class "Rental\n<b>Class Rental</b>" as Rental {
    -employeeId : ?int
    -carId : ?int
    -rentalFrom : ?string
    -rentalTo : ?string
    -id : ?int
    +__construct(id, employeeId, carId, rentalFrom, rentalTo)
    +getAllAsObjects()
    +deleteObjectById(id)
    +insert(employeeId, carId, rentalFrom, rentalTo)
    +getObjectById(id)
    +update()
    +getEmployeeId()
    +getCarId()
    +getRentalFrom()
    +getRentalTo()
    +getId()
    +getLicensePlate()
    +getEmployeePulldown()
    +getCarPulldown()
  }
  class "FilterData\n<b>Class FilterData</b>" as FilterData {
    -requestData : array
    +__construct(requestData)
    +filter()
  }
  class "InsertController\n<b>Class: InsertController</b>" as InsertController {
    -area : string
    -postData : array
    -view : string
    +__construct(requestData)
    +invoke()
    +getView()
  }
  interface "IController\n<b>Interface: IController</b>" as IController {
    +__construct(requestData)
    +invoke()
    +getView()
  }
  class "ShowTableController\n<b>Class: ShowTableController</b>" as ShowTableController {
    -area : string
    -view : string
    +__construct(requestData)
    +invoke()
    +getView()
  }
  class "Db\n<b>Design Pattern Singleton</b>" as Db {
    -dbh : object
    {static} +getConnection()
  }
  class "ShowFormController\n<b>Class: ShowFormController</b>" as ShowFormController {
    -area : string
    -id : ?int
    -view : string
    -action : string
    +__construct(requestData)
    +invoke()
    +getView()
    +getAction()
  }
  class "UpdateController\n<b>Class: UpdateController</b>" as UpdateController {
    -area : string
    -id : int
    -postData : array
    -view : string
    +__construct(requestData)
    +invoke()
    +getView()
  }
  class "Car\n<b>Class Car</b>" as Car {
    -id : ?int
    -licensePlate : ?string
    -manufacturer : ?string
    -type : ?string
    +__construct(id, licensePlate, manufacturer, type)
    +getLicensePlate()
    +getManufacturer()
    +getType()
    +getId()
    +getAllAsObjects()
    +deleteObjectById(id)
    +insert(licensePlate, manufacturer, type)
    +getObjectById(id)
    +update()
    +getPulldownMenu(carId)
  }
  class "DeleteController\n<b>Class: DeleteController</b>" as DeleteController {
    -area : string
    -id : int
    -view : string
    +__construct(requestData)
    +invoke()
    +getView()
  }
  interface "IBasic\n<b>IBasic</b>" as IBasic {
    +getAllAsObjects()
    +deleteObjectById(id)
    +getObjectById(id)
    +update()
  }
  Car --- Db
  DeleteController --- Car
  InsertController --- Car
  ShowFormController --- Car
  ShowTableController --- Car
  UpdateController --- Car
  DeleteController --- Employee
  InsertController --- Employee
  ShowFormController --- Employee
  ShowTableController --- Employee
  UpdateController --- Employee
  DeleteController --- Rental
  InsertController --- Rental
  ShowFormController --- Rental
  ShowTableController --- Rental
  UpdateController --- Rental
  Employee --- Db
  IBasic <|.up.. Car
  IBasic <|.up.. Employee
  IBasic <|.up.. Rental
  Car -right--o Rental
  Employee -left--o Rental
  IController <|... DeleteController
  IController <|... InsertController
  IController <|... ShowFormController
  IController <|... ShowTableController
  IController <|... UpdateController
  InsertController -up-- FilterData
  Rental --- Db
  UpdateController -up-- FilterData
@enduml
